# sen-godot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
config/: config.yaml
demo-project/: icon.svg.import  project.godot
demo-project/assets/aim-9/: aim-9.tscn
demo-project/assets/c-17/: c-17.tscn
demo-project/assets/chaff/: chaff.tscn
demo-project/assets/f18/: f18.tscn
demo-project/config/: boot.yaml  configuration.yaml
demo-project/scenes/: main.tscn
demo-project/scripts/: camera.gd
demo-project/scripts/camera/: baseCamera.gd  dynamicCamera.gd
godot-project/: project.godot
godot-project/assets/aim-9/: aim-9.tscn
godot-project/assets/chaff/: chaff.tscn
godot-project/cloud_sky/: cloud-demo.tscn  clouds.gdshader  clouds_sky.tres
godot-project/config/: configuration.yaml
godot-project/scenes/: main.tscn
godot-project/scripts/camera/: baseCamera.gd  dynamicCamera.gd
src/: register_types.cpp  register_types.h  sen_godot_component.cpp  sen_godot_component.h  sen_node.cpp  sen_node.h  utils.h
src/fom/: aircraft.stl
src/managers/: aircraft_manager.cpp  aircraft_manager.h  base_entity_manager.cpp  base_entity_manager.h  expendable_manager.cpp  expendable_manager.h  munition_manager.cpp  munition_manager.h  physical_entity_manager.cpp  physical_entity_manager.h  platform_manager.cpp  platform_manager.h  root_manager.h  view_manager.cpp  view_manager.h
src/stl/: configuration.stl
